# Robil-Trade

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
.kiro/specs/deploy-blocker-fixes/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/steering/: superpowers.md
.superpowers/sdd/: progress.md  task-0.1-diff.txt  task-0.1-report.md  task-0.2-diff.txt  task-0.2-report.md  task-0.3-report.md  task-1.1-diff.txt  task-1.1-report.md  task-1.11-report.md  task-1.3-diff.txt  task-1.5-report.md  task-1.6-diff.txt  task-1.6-report.md  task-1.8-report.md  task-2.1-report.md  task-2.2-diff.txt  task-2.2-report.md  task-2.3-report.md  task-2.5-report.md  task-2.6-report.md  task-3.1-report.md  task-3.2-report.md  task-3.3-report.md  task-4.1-report.md  task-4.11-report.md  task-4.3-report.md  task-4.8-report.md  task-5.1-report.md  task-5.3-report.md  task-6.1-report.md  task-6.3-report.md  task-6.4-report.md
config/: Caddyfile  costs.yaml  instruments.yaml  litellm.yaml  oauth_providers.example.yaml  settings.yaml  static_calendar.json
config/strategies/: s1_trend_pullback.yaml  s2_range_mr.yaml  s3_mtf_scalper.yaml  s4_smc_scalper.yaml
docs/: AUTH_OAUTH.md  CODE_REVIEW_CHECKLIST.md  IMPLEMENTATION_PLAN_v2.md  IMPLEMENTATION_TASKS.md  IMPLEMENTATION_TASKS_2.md  IMPLEMENTATION_TASKS_3.md  IMPLEMENTATION_TASKS_4.md  IMPLEMENTATION_TASKS_5.md  IMPLEMENTATION_TASKS_6_AUTH.md  IMPLEMENTATION_TASKS_7_SECURITY.md  IMPLEMENTATION_TASKS_8_CREDENTIAL_POOL.md  IMPLEMENTATION_TASKS_9_AUTH_DEPLOY_FIXES.md  RUNBOOK.md  RUNBOOK_ACTIVATION.md  THREAT_MODEL.md  UPGRADE_PLAN.md  VALIDATION_RESULTS.md
docs/adr/: ADR-001-signal-assistant-not-execution-bot.md  ADR-002-custom-engine-freqtrade-pattern.md  ADR-003-data-providers.md  ADR-004-pandas-ta-not-talib.md  ADR-005-litellm-router.md  ADR-006-sequential-pipeline-not-langgraph.md  ADR-007-backtester-vectorbt-plus-custom.md  ADR-008-timescaledb-from-day-one.md  ADR-009-secrets-dotenv-not-vault.md  ADR-010-default-llm-models.md  ADR-011-python312-uv-monorepo.md  ADR-012-paper-tracking-gate.md  ADR-013-hmm-regime-evaluation.md  ADR-A10-conceptual-reference-only.md  ADR-A12-investing-calendar-endpoint-tos.md
docs/runbooks/: deploy.md  incident-data-gap.md  incident-hallucination.md  oauth-provider-onboarding.md  rollback.md  rotate-api-keys.md
docs/superpowers/plans/: 2026-06-20-audit-remediation.md  2026-06-20-sp1-data-layer.md  2026-06-20-sp2-mtf-engine.md  2026-06-20-sp3-smc-indicators.md  2026-06-20-sp4-scalping-strategies.md  2026-06-20-sp5-swing-refresh.md  2026-06-20-sp6-validation-rollout.md  2026-06-21-auto-setup-multi-account-llm.md
docs/superpowers/specs/: 2026-06-20-codebase-audit-findings.md  2026-06-20-scalping-mtf-smc-swing-design.md  2026-06-21-auto-setup-multi-account-llm-design.md
migrations/: env.py
migrations/versions/: 0001_initial_schema.py  0002_add_calendar_source_health.py
scripts/: backfill.py  backfill_all.sh  backup_db.sh  eval_hallucination.py  run_backtest.py  setup_vps.sh  status.sh  update.sh
src/rtrade/: __init__.py
src/rtrade/backtest/: __init__.py  costs.py  engine.py  harness.py  metrics.py  permutation.py  smart_exit.py  validation.py  walkforward.py
src/rtrade/cli/: __init__.py  __main__.py  auth.py  backfill.py  backtest.py  bot.py  promote.py  setup.py
src/rtrade/core/: config.py  constants.py  errors.py  logging_redact.py  logging_setup.py  text_sanitize.py  timeutil.py
src/rtrade/data/: __init__.py  base.py  ccxt_provider.py  composite_calendar.py  composite_market.py  derivatives.py  fear_greed.py  finnhub_calendar.py  ingestion.py  investing_calendar.py  nasdaq_calendar.py  oanda_provider.py  ratelimit.py  static_calendar.py  twelvedata_provider.py
src/rtrade/delivery/: __init__.py  formatter.py  telegram_bot.py
src/rtrade/guardrails/: __init__.py  gate.py  selftest.py
src/rtrade/indicators/: __init__.py  engine.py  smc.py  structure.py
src/rtrade/llm/: __init__.py  analyst.py  budget_guard.py  cascade.py  client.py  context_pack.py  coroner.py  critic.py  key_manager.py  model_router.py  pipeline.py  pool_builder.py  sanitize.py  verifier.py
src/rtrade/ml/: __init__.py  meta_label.py  model_io.py  similar.py
src/rtrade/monitoring/: __init__.py  alerts.py  healthcheck.py
src/rtrade/papertrack/: __init__.py  excursion.py  minute_resolution.py  tracker.py  virtual_exits.py
src/rtrade/persistence/: audit_chain.py  db.py  models.py  repositories.py
src/rtrade/pipeline/: __init__.py  mtf.py  scan.py
tests/: conftest.py
tests/backtest/: test_cli_backtest.py  test_costs.py  test_engine_chronological.py  test_engine_gap_fills.py  test_engine_smart_exit_pnl.py  test_metrics.py  test_validation.py
tests/integration/: test_audit_chain_concurrency.py  test_backtest_run_repo_latest.py  test_db_roundtrip.py  test_oanda_live.py  test_redis.py  test_repo_atomic_upserts_int.py
tests/unit/: test_alert_consolidation.py  test_alerts.py  test_analytics.py  test_api_app.py  test_api_audit_remediation.py  test_api_security.py  test_audit_chain.py  test_auth_base.py  test_auth_rate_limit.py  test_auth_registry.py  test_auth_runtime_parity.py  test_backfill.py  test_backtest.py  test_budget_guard.py  test_budget_guard_wiring.py  test_calendar_provider_failures.py  test_calendar_providers.py  test_candle_validation.py  test_cascade.py  test_cli_auth_login.py  test_cli_auth_use.py  test_cli_backfill_all.py  test_cli_dispatch.py  test_cli_setup.py  test_composite_market.py  test_config.py  test_config_pool.py  test_confluence.py  test_confluence_scoring.py  test_constants.py  test_context_pack_fencing.py  test_coroner.py  test_costs_xauusd.py  test_credential_pool.py  test_data_base.py  test_deploy_blocker_ingest_exploration.py  test_deploy_blocker_ingest_preservation.py  test_deploy_blocker_schedule_exploration.py  test_deploy_blocker_schedule_preservation.py  test_deploy_blocker_selftest_exploration.py  (+84 more)
(+49 files in other folders)
