[project]
name = "rtrade"
version = "0.1.0"
description = "Robil Trade — AI-brained precision trading signal assistant (signal-only, manual execution by user)"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "PyYAML>=6.0.2",
    "SQLAlchemy[asyncio]>=2.0.35",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "greenlet>=3.1",
    "redis>=5.0",
    "httpx>=0.27",
    "tenacity>=9.0",
    "structlog>=24.4",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "freezegun>=1.5",
    "hypothesis>=6.112",
    "respx>=0.21",
    "pre-commit>=4.0",
    "types-PyYAML>=6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/rtrade"]

# ---------------------------------------------------------------------------
# Lint & format — ruff
# DTZ (flake8-datetimez) enforces Golden Rule: timezone-aware UTC everywhere.
# T20 bans print() — use structlog.
# ---------------------------------------------------------------------------
[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "UP", "B", "SIM", "C4", "DTZ", "RUF", "T20", "PLE"]

[tool.ruff.lint.per-file-ignores]
"migrations/versions/*" = ["E501"]

# ---------------------------------------------------------------------------
# Type checking — mypy strict on src/ (per IMPLEMENTATION_PLAN §0.9)
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true
mypy_path = "src"
packages = ["rtrade"]
plugins = ["pydantic.mypy"]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true

# ---------------------------------------------------------------------------
# Tests
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-q"
markers = [
    "integration: requires the running docker compose dev stack (db + redis)",
]

[tool.coverage.run]
source = ["src/rtrade"]
